--- a/FVHyperbolic.ipynb
+++ b/FVHyperbolic.ipynb
@@ -1019,6 +1019,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -1033,7 +1034,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "volumes = numpy.abs(numpy.cross(points[tri[:,1]] - points[tri[:,0]],\n",
@@ -1077,7 +1080,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Mesh:\n",
@@ -1125,6 +1130,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
